--- a/content/config.yml
+++ b/content/config.yml
@@ -2,6 +2,7 @@
 active_modules: [pygments, tags, blog]
 author: Brad Wright
 canonical_url: http://intranation.com/
+html_writer: html5writer.html5writer.SemanticHTML5Writer
 modules:
   pygments:
     style: tango
