Nginx mode by default

--- a/etc/nginx/intranation-tumblr-redirects.conf
+++ b/etc/nginx/intranation-tumblr-redirects.conf
@@ -1,3 +1,5 @@
+# -*- mode: nginx -*-
+
 # redirects from old content to new Tumblr hosting
 
 rewrite ^/feeds/feedburner.atom$ http://tumblr.intranation.com/rss;
